--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PLN Proodo</title>
+    <title>PLN Praad</title>
     <script src="https://www.youtube.com/iframe_api"></script>
     <style>
         * {
@@ -467,9 +467,6 @@
             height: 100vh;
             background: #000;
             z-index: 1000;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
             padding: 2rem;
             opacity: 0;
             transform: translateY(100%);
@@ -477,23 +474,27 @@
         }
 
         .bio-section.active {
-            display: flex;
+            display: block;
             opacity: 1;
             transform: translateY(0);
+        }
+
+        .bio-content {
+            width: 66.66%; /* Deux tiers de l'écran */
+            margin-left: 0;
+            padding-top: 120px; /* Espace pour la navigation */
         }
 
         .bio-title {
             font-size: 2.5rem;
             font-weight: bold;
-            text-align: center;
             margin-bottom: 1rem;
         }
 
         .bio-text {
-            font-size: 1.2rem;
+            font-size: 1.25rem; /* Moitié de 2.5rem */
             font-weight: 300;
-            text-align: center;
-            max-width: 600px;
+            font-style: italic;
             margin-bottom: 2rem;
         }
 
@@ -502,6 +503,7 @@
             color: #3498db;
             text-decoration: none;
             cursor: pointer;
+            display: block;
         }
 
         .bio-link:hover {
@@ -670,12 +672,17 @@
                 height: 30px;
             }
 
+            .bio-content {
+                width: 100%;
+                padding-top: 80px;
+            }
+
             .bio-title {
                 font-size: 1.8rem;
             }
 
             .bio-text {
-                font-size: 1rem;
+                font-size: 0.9rem;
             }
 
             .bio-photo {
@@ -828,9 +835,11 @@
 
     <!-- Section Bio -->
     <section class="bio-section" id="bio-section">
-        <div class="bio-title">Vidéaste Passionné de Vidéographie. Créateur de Films. Conteur d'Histoires</div>
-        <div class="bio-text">Avec une passion pour capturer des moments uniques et raconter des histoires visuelles, je transforme des idées en expériences cinématographiques mémorables. Chaque projet est une opportunité de créer quelque chose d'extraordinaire.</div>
-        <a href="#" class="bio-link" onclick="hideBio()">voir le portfolio</a>
+        <div class="bio-content">
+            <div class="bio-title">Vidéaste<br>Passionné de Vidéographie.<br><br>Créateur de<br>Films.<br><br><br>Conteur d'Histoires</div>
+            <div class="bio-text"><i>Texte de paragraphe. Vous pouvez le personnaliser et ajouter votre propre contenu. Cliquez ici pour modifier le texte et ajouter des informations sur votre entreprise, présenter votre équipe et les services proposés. Vous pouvez également partager votre histoire, vos inspirations, et mettre en avant votre approche unique. Captivez l'attention de vos visiteurs et faites-vous remarquer.</i></div>
+            <a href="#" class="bio-link" onclick="hideBio()">voir le portfolio</a>
+        </div>
         <img src="https://via.placeholder.com/400x300?text=Photo+Bio" alt="Photo Bio" class="bio-photo">
         <div class="bio-awards">
             <h3>Distinctions & Commentaires Clients</h3>
@@ -1031,14 +1040,12 @@
             document.querySelector('.video-section').classList.add('active');
             window.scrollTo(0, 0);
 
-            // Initialiser le lecteur YouTube après un délai
             if (typeof YT !== 'undefined' && YT.loaded) {
                 setTimeout(() => {
                     if (!player) {
                         player = new YT.Player('youtube-player', {
                             events: {
                                 'onReady': (event) => {
-                                    console.log('YouTube Player is ready, playing video');
                                     event.target.playVideo();
                                 },
                                 'onStateChange': onPlayerStateChange
@@ -1060,7 +1067,6 @@
         // Gérer les changements d'état du lecteur
         function onPlayerStateChange(event) {
             const activeThumbnail = document.querySelector('.related-video.active');
-            console.log('Player state changed:', event.data, 'Thumbnail found:', !!activeThumbnail);
             if (activeThumbnail) {
                 const videoInfo = activeThumbnail.querySelector('.video-info');
                 const playingText = activeThumbnail.querySelector('.playing-text');
@@ -1164,12 +1170,12 @@
         function showBio() {
             const bioSection = document.getElementById('bio-section');
             const mosaic = document.getElementById('mosaic');
-            currentColumn = 0; // Retour au projet 1
+            currentColumn = 0;
             mosaic.style.transform = `translateX(0)`;
             window.scrollTo({ top: 0, behavior: 'smooth' });
             setTimeout(() => {
                 bioSection.classList.add('active');
-            }, 100); // Délai pour aligner avec le scroll
+            }, 100);
         }
 
         function hideBio() {
@@ -1177,7 +1183,7 @@
             bioSection.classList.remove('active');
             setTimeout(() => {
                 window.scrollTo({ top: 0, behavior: 'smooth' });
-            }, 500); // Attendre la fin du fondu
+            }, 500);
         }
     </script>
 </body>
